Fix the Help Center on mobile

--- a/packages/help-center/src/styles.scss
+++ b/packages/help-center/src/styles.scss
@@ -150,6 +150,7 @@ $z-index: 99999;
 			bottom: 0;
 			left: 0;
 			right: 0;
+			top: 0;
 			max-height: calc(100% - 45px);
 			height: 100%;
 
